--- a/ex1/index.html
+++ b/ex1/index.html
@@ -5,8 +5,7 @@
 
 		<meta charset="utf-8" />
 
-		<link rel="stylesheet" type="text/css" href="stylesheets/...">
-		<link rel="stylesheet" type="text/css" href="stylesheets/...">
+		<link href="Stylesheets/style.css" rel="stylesheet" type="text/css" />
 
 	</head>
 
@@ -21,15 +20,15 @@
 					<div id="nav">
 
 						<ul>
-							<li> <a href="#" title="HOME"> HOME <span> back to home</span> </a> </li>
+							<li> <a href="#" title="HOME"> HOME </br> <span>  back to home</span> </a> </li>
 
-							<li> <a href="#" title="ABOUT US"> ABOUT US <span> Lear more avout us</span> </a> </li>
+							<li> <a href="#" title="ABOUT US"> ABOUT US </br> <span> Lear more avout us</span> </a> </li>
 
-							<li> <a href="#" title="REFERENCES"> REFERENCES <span> Check out works</span> </a> </li>	
+							<li> <a href="#" title="REFERENCES"> REFERENCES </br> <span> Check out works</span> </a> </li>	
 
-							<li> <a href="#" title="NEWS"> NEWS <span> Our latest news</span> </a> </li>
+							<li> <a href="#" title="NEWS"> NEWS </br> <span> Our latest news</span> </a> </li>
 
-							<li> <a href="#" title="CONTACT US"> CONTACT US <span> School Contacts</span> </a> </li>							
+							<li> <a href="#" title="CONTACT US"> CONTACT US </br> <span> School Contacts</span> </a> </li>							
 
 						</ul>
 
@@ -42,14 +41,32 @@
 
 
 				<div id="content">
-					<div id="slider">
-					<!--  LE SLIDER -->
+					<div id="slider"> <!--  LE SLIDER -->	
+										<img src="images/avion.jpg" width = "1520"/>
 					</div>
 
-					<div id="container">
-					<!-- LES 3 COLONNES-->
+					<div id="container"> <!-- LES 3 COLONNES-->
+									<div class="colone">
+										<div id="col1">
+											<div class="contentcol"><p> yo </p></div>
+										</div>
+									</div>
+									<div class="colone">
+
+										<div id="col2">
+											<div class="contentcol"><p> yo </p></div>
+										</div>
+									</div>	
+									<div class="colone">
+
+										<div id="col3">
+											<div class="contentcol"><p> yo </p></div>
+										</div>
+									</div>
+						</div>
+
 					</div>
-				</div>    <!-- FIN CONTENT-->
+			   <!-- FIN CONTENT-->
 
 
 				<div id"footer">
@@ -63,7 +80,7 @@
 			</div>     <!-- FIN WRAPPER -->
 
 
-</div>
+
 
 
 		</body>		
